Added product symbol

--- a/cmb_parity_presentation.tex
+++ b/cmb_parity_presentation.tex
@@ -218,7 +218,7 @@
         Looking at just the $\phi$ dependent terms:
         \begin{align*}
             &\int_0^{2\pi} d\phi_0 d\phi_1 d\phi_2 d\phi_3 e^{im'_0\phi_0}e^{im'_1\phi_1 + im_1\phi_1}e^{im'_2\phi_2 + im_2\phi_2}e^{im'_3\phi_3 + im_3\phi_3}\\
-            &= \left[\left.\frac{1}{im'_0}e^{im'_0\phi_0}\right|_0^{2\pi}\right] \left[\left.\frac{1}{i(m'_j + m_j)}e^{i(m'_j + m_j)\phi_j}\right|_0^{2\pi}\right]\ for\ j = 1,2,3
+            &= \left[\left.\frac{1}{im'_0}e^{im'_0\phi_0}\right|_0^{2\pi}\right] \prod_j \left[\left.\frac{1}{i(m'_j + m_j)}e^{i(m'_j + m_j)\phi_j}\right|_0^{2\pi}\right]\ for\ j = 1,2,3
         \end{align*}
         Each of the above integrals will always be zero since all m's are integers unless $m'_0 = 0$ and $m'_j + m_j = 0$ in which case
         each term becomes $2\pi$ so the total $\phi$ integral becomes:
