--- a/cmb_parity_presentation.tex
+++ b/cmb_parity_presentation.tex
@@ -54,8 +54,8 @@
         \frametitle{Intitial Calculations}
         Start by expanding the two correlation functions in terms of isotropic basis functions:
         \begin{eqnarray*}
-            \zeta_{x_0} (\vec r_1, \vec r_2, \vec r_3) &=& \sum_{\Lambda} \tilde{\zeta_{\Lambda}}(r_1, r_2, r_3) \mathcal P_{\Lambda}(\hat r_1, \hat r_2, \hat r_3)\\
-            \zeta_E (\vec x_0, \vec x_1, \vec x_2, \vec x_3) &=& \sum_{\Lambda '} \tilde{\zeta_{\Lambda '}}(x_0, x_1, x_2, x_3) \mathcal P_{\Lambda '}(\hat x_0, \hat x_1, \hat x_2, \hat x_3)
+            \zeta_{x_0} (\vec r_1, \vec r_2, \vec r_3) &=& \sum_{\Lambda} {\zeta_{\Lambda}}(r_1, r_2, r_3) \mathcal P_{\Lambda}(\hat r_1, \hat r_2, \hat r_3)\\
+            \zeta_E (\vec x_0, \vec x_1, \vec x_2, \vec x_3) &=& \sum_{\Lambda '} {\zeta_{\Lambda '}}(x_0, x_1, x_2, x_3) \mathcal P_{\Lambda '}(\hat x_0, \hat x_1, \hat x_2, \hat x_3)
         \end{eqnarray*}
         Where $\Lambda$ is the set $\{l_1, l_2, l_3\}$ and $\Lambda'$ is the set $\{l_0', l_1', l_{01}', l_2', l_3'\}$
     \end{frame}
@@ -264,10 +264,10 @@
     \begin{frame}{Solving the $\theta$ integral}
         Looking at the $\theta$ integral, we have:
         \begin{align*}
-            &\int_0^{2\pi} d\theta_0 d\theta_1 d\theta_2 d\theta_3 sin(\theta_0) sin(\theta_1) sin(\theta_2) sin(\theta_3)\\
+            &\int_0^{\pi} d\theta_0 d\theta_1 d\theta_2 d\theta_3 sin(\theta_0) sin(\theta_1) sin(\theta_2) sin(\theta_3)\\
             &\times \zeta_{\Lambda}(\sqrt{2}d^*\sqrt{1-cos(\theta_1)}, \sqrt{2}d^*\sqrt{1-cos(\theta_2)}, \sqrt{2}d^*\sqrt{1-cos(\theta_3)})\\
-            &\times P_{l'_0 m'_0}(cos \theta_0) P_{l'_1 m'_1}(cos \theta_1) P_{l'_2 m'_2}(cos \theta_2) P_{l'_3 m'_3}(cos \theta_3) \\
-            &\times P_{l_1 m_1}(cos (\frac{\theta_1}{2} + \frac{\pi}{2})) P_{l_2 m_2}(cos (\frac{\theta_2}{2} + \frac{\pi}{2})) P_{l_3 m_3}(cos (\frac{\theta_3}{2} + \frac{\pi}{2}))
+            &\times P_{l'_0}^{m'_0}(cos \theta_0) P_{l'_1}^{m'_1}(cos \theta_1) P_{l'_2}^{m'_2}(cos \theta_2) P_{l'_3}^{m'_3}(cos \theta_3) \\
+            &\times P_{l_1}^{m_1}(cos (\frac{\theta_1}{2} + \frac{\pi}{2})) P_{l_2}^{m_2}(cos (\frac{\theta_2}{2} + \frac{\pi}{2})) P_{l_3}^{m_3}(cos (\frac{\theta_3}{2} + \frac{\pi}{2}))
         \end{align*}
     \end{frame}
 
@@ -293,7 +293,7 @@
     \begin{frame}{Rotating spherical harmonics}
         Using the theorem:
         \begin{equation*}
-            D_{ms}^l(\alpha, \beta, \phi) = (-1)^s \sqrt{\frac{4\pi}{2l + 1}} \ _{-s}Y_l^{*m}(\beta, \alpha)e^{-is\gamma}
+            D_{ms}^l(\alpha, \beta, \gamma) = (-1)^s \sqrt{\frac{4\pi}{2l + 1}} \ _{-s}Y_l^{*m}(\beta, \alpha)e^{-is\gamma}
         \end{equation*}
         we can rewrite the D-matrices as spin-weighted spherical harmonics. When doing this approach however, since we are rotating by $\beta = \frac{-\theta}{2} + \frac{\pi}{2}$
         we still have an argument in terms of $\frac{\theta}{2}$
